# tam

./: .buildinfo  .gitignore  ACKNOWLEDGEMENTS.html  ACKNOWLEDGEMENTS.md  AUTHORS.html  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.html  EXAMPLES.html  EXAMPLES.md  LICENSE  README.html  README.md  README_DOC.html  README_DOC.md  THEORY.html  THEORY.md  bibliography.html  build_docs.bat  genindex.html  index.html  objects.inv  paper.md  pyproject.toml  references.bib  requirements.txt  search.html  searchindex.js
.doctrees/: ACKNOWLEDGEMENTS.doctree  AUTHORS.doctree  CHANGELOG.doctree  CONTRIBUTING.doctree  EXAMPLES.doctree  README.doctree  README_DOC.doctree  THEORY.doctree  bibliography.doctree  environment.pickle  index.doctree
.github/workflows/: docs.yml  publish.yml  tests.yml
_sources/: AUTHORS.md.txt  CHANGELOG.md.txt  CONTRIBUTING.md.txt  README.md.txt  THEORY.md.txt
architecture/core/: 01_additive_api.html  01_additive_api.md  02_data_pipeline.html  02_data_pipeline.md  03_math_dispatcher.html  03_math_dispatcher.md  04_hardware_memory.html  05_gcv_implementation.html  05_gcv_implementation.md  06_the_spectrum_api.html  06_the_spectrum_api.md
architecture/meta/: 01_adaptive_code.html  02_kalman_torchscript.html  03_hierarchical_code.html  04_safety_code.html  05_opera_gpu.html  06_neural_hybrid.html  07_diagnostics_utils.html  07_diagnostics_utils.md  08_auto_orchestrator_code.html  08_auto_orchestrator_code.md  09_auto_data_topology_code.html  10_mlops_tracking_code.html
docs/source/: .gitignore  conf.py  index.rst
math/core/: 01_primal_model.html  02_tensorization.html  02_tensorization.md  03_linear_system.html  03_linear_system.md  04_complexity.html  04_complexity.md  05_gcv_theory.html
math/meta/: 01_adaptive_online.html  01_adaptive_online.md  02_kalman_filter.html  02_kalman_filter.md  03_hierarchical_joint.html  03_hierarchical_joint.md  04_conformal_safety.html  04_conformal_safety.md  05_opera_aggregation.html  06_deep_gam_backfitting.html  07_statistical_diagnostics.html  07_statistical_diagnostics.md  08_auto_orchestrator.html  09_auto_data_topology.html  10_mlops_evaluation.html  10_mlops_evaluation.md
math/spectrum/: CATEGORICAL.html  CATEGORICAL.md  CHEBYSHEV.html  CROSS_TENSOR.html  FOURIER.html  LINEAR.html  LINEAR.md  LINEAR_TREE.html  LINEAR_TREE.md  NEURAL.html  PHYSICS_PIKL.html  PID.html  PID.md  RBF.html  SPLINES.html  SPLINES.md  TREE.html  TREE.md  WAVELETS.html  WAVELETS.md
slides/: adaptive_tam_slide.py  categorical_slide.py  chebychev_slide.py  fourier_slide.py  frontier_modules_slide.py  linear_slide.py  linear_tree_slide.py  make_slides.py  mlops_evaluation_slide.py  nept_neural_slide.py  opera_tam_slide.py  pid_slide.py  pikl_physics_slide.py  rbf_slide.py  solver_comparison_slide.py  spline_slide.py  tensor_interaction_slide.py  tree_slide.py  wavelet_slide.py
src/tam/: __init__.py
tests/: conftest.py  test_adaptive_edge_cases.py  test_adaptive_tam.py  test_additive_advanced.py  test_autotam_context.py  test_autotam_data_profiler.py  test_autotam_effect_selector.py  test_autotam_feature_engineer.py  test_autotam_knowledge_graph.py  test_autotam_parser.py  test_autotam_pipeline_base_discoverer.py  test_autotam_pipeline_context.py  test_autotam_pipeline_data_manager.py  test_autotam_pipeline_ensemble_selector.py  test_autotam_pipeline_expert_expander.py  test_autotam_population_nodes.py  test_bode.py  test_core_engine.py  test_data.py  test_diagnostics_stats.py  test_dispatcher.py  test_eval_plotting.py  test_extrapolation.py  test_factory.py  test_formula_api.py  test_hardware_manager.py  test_hierarchical.py  test_kalman.py  test_math.py  test_memory.py  test_metrics.py  test_neural_tam.py  test_opera_plot.py  test_opera_tam.py  test_opera_tam_advance.py  test_performance_analyzer.py  test_safety.py  test_serialization.py  test_tracker.py  test_utils.py
use_cases/: air_passengers.py  cheatsheet.py  readme.py  utils_cases.py
(+141 files in other folders)
